--- a/src/Makefile
+++ b/src/Makefile
@@ -12,6 +12,8 @@ SHLIB_TEENY=	0
 
 COPTS+=		-O2 -g
 CPPFLAGS+=	-DSLJIT_CONFIG_AUTO=1
+CPPFLAGS+=	-DSLJIT_VERBOSE=0
+CPPFLAGS+=	-DSLJIT_DEBUG=0
 CPPFLAGS+=	-I ../sljit/sljit_src/
 
 LDADD+=		-lsljit
