Add more BPF_LDX tests and increase WARNS to 4.

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,8 @@
 PROG=	bpfjit_test
 SRCS=	main.c util.c test_empty.c test_ld.c test_ldx.c
 
+WARNS=	4
+
 COPTS+=		-O2 -g
 CPPFLAGS+=	-I ../src
 CPPFLAGS+=	-DSLJIT_CONFIG_AUTO=1
