--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,5 @@
 PROG=	bpfjit_test
-SRCS=	main.c util.c test_empty.c test_ld.c test_ldx.c
+SRCS=	main.c util.c test_empty.c test_ld.c test_ldx.c test_alu.c
 
 WARNS=	4
 
