Test BPF_JMP+BPF_JA and BPF_JMP+BPF_JGT+BPF_K.

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,6 @@
 PROG=	bpfjit_test
 SRCS=	main.c util.c test_empty.c test_ld.c \
-	test_ldx.c test_alu.c test_misc.c
+	test_ldx.c test_alu.c test_misc.c test_jmp.c
 
 WARNS=	4
 
