--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,7 @@
 PROG=	bpfjit_test
 SRCS=	main.c util.c test_empty.c test_ld.c \
-	test_ldx.c test_alu.c test_misc.c test_jmp.c
+	test_ldx.c test_alu.c test_misc.c test_jmp.c \
+	test_st.c
 
 WARNS=	4
 
