--- a/src/Makefile
+++ b/src/Makefile
@@ -11,6 +11,7 @@ SHLIB_MINOR=	0
 SHLIB_TEENY=	0
 
 COPTS+=		-O2 -g
+CPPFLAGS+=	-DBPFJIT_USE_UDIV
 CPPFLAGS+=	-DSLJIT_CONFIG_AUTO=1
 CPPFLAGS+=	-DSLJIT_VERBOSE=0
 CPPFLAGS+=	-DSLJIT_DEBUG=0
