--- a/benchmark/Makefile
+++ b/benchmark/Makefile
@@ -4,7 +4,8 @@ SRCS=	benchmark.c c.c
 WARNS=	4
 
 COPTS+=		-O2 -g
-CPPFLAGS+=	-I ../src
+CPPFLAGS+=	-I ../src -I ../sljit/sljit_src/
+CPPFLAGS+=	-DSLJIT_CONFIG_AUTO=1
 
 LDADD+=		-lpcap -lbpfjit -lsljit
 LDFLAGS+=	-L ${.OBJDIR}/../src
