--- a/test/Makefile
+++ b/test/Makefile
@@ -6,7 +6,8 @@ SRCS=	main.c util.c test_empty.c test_ld.c \
 WARNS=	4
 
 COPTS+=		-O2 -g
-CPPFLAGS+=	-I ../src
+CPPFLAGS+=	-I ../src -I ../sljit/sljit_src/
+CPPFLAGS+=	-DSLJIT_CONFIG_AUTO=1
 
 LDADD+=		-lpcap -lbpfjit -lsljit
 LDFLAGS+=	-L ${.OBJDIR}/../src
