--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
+# Object files
+*.o
+*.os
+
+# Libraries
+*.lib
+*.a
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# mk-configure
+_mkc_*
+
+# Tags
+tags
+
+# sljit
 sljit/**/*.h
 sljit/**/*.c
 sljit/**/.svn
