--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: c
 compiler:
   - gcc
   - clang
-before_script: svn co https://sljit.svn.sourceforge.net/svnroot/sljit@r220 sljit/sljit
+before_script: svn co 'https://svn.code.sf.net/p/sljit/code@r220' sljit/sljit
 script: make -C src/
