--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
 language: c
-compiler:
-  - gcc
-  - clang
 before_script: rm -rf sljit && svn co 'https://svn.code.sf.net/p/sljit/code@r220' sljit && curl 'http://www.opensource.apple.com/source/libpcap/libpcap-16/libpcap/pcap-bpf.h?txt' -o pcap-bpf.h
 script: make -C src/
 
@@ -19,4 +16,4 @@ addons:
     notification_email: alnsn@yandex.ru
     build_command_prepend: "rm -rf sljit && svn co 'https://svn.code.sf.net/p/sljit/code@r220' sljit && curl 'http://www.opensource.apple.com/source/libpcap/libpcap-16/libpcap/pcap-bpf.h?txt' -o pcap-bpf.h"
     build_command:   "make -C src/"
-    branch_pattern: master
+    branch_pattern: coverity_scan
