Syncronise with NetBSD base.

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,11 +11,12 @@ SHLIB_MINOR=	0
 SHLIB_TEENY=	0
 
 COPTS+=		-O2 -g
-CPPFLAGS+=	-DBPFJIT_USE_UDIV
+#XXX CPPFLAGS+=	-DBPFJIT_USE_UDIV
 CPPFLAGS+=	-DSLJIT_CONFIG_AUTO=1
 CPPFLAGS+=	-DSLJIT_VERBOSE=0
 CPPFLAGS+=	-DSLJIT_DEBUG=0
 CPPFLAGS+=	-I ../sljit/sljit_src/
+CPPFLAGS+=	-I ../
 
 LDADD+=		-lsljit
 LDFLAGS+=	-L ${.OBJDIR}/../sljit/sljit_src
